# honeychat

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: tutorial-ci.yml
docs/: api.md  architecture.md
tutorial/: README.md
tutorial/01-memory/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tutorial/01-memory/app/: api.py  bot.py  memory.py
tutorial/01-memory/tests/: test_memory.py
tutorial/02-routing/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tutorial/02-routing/app/: main.py  router.py
tutorial/02-routing/tests/: test_fallback_chain.py
tutorial/03-lora/: README.md  kohya-config.toml  train.sh
tutorial/03-lora/dataset/: README.md
tutorial/04-ipadapter/: README.md  client.py  pyproject.toml  workflow.json
tutorial/04-ipadapter/tests/: test_workflow_validation.py
