[project]
name = "honeychat-tutorial-01-memory"
version = "0.1.0"
description = "Tutorial: dual-layer memory (Redis + ChromaDB) for AI companion chatbots"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "redis>=5.1,<6",
    "chromadb>=0.5.20,<0.6",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
